--- a/Assignment2/data/scenario_creator.ipynb
+++ b/Assignment2/data/scenario_creator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "8760 2023-03-26     2    NaN      1293.8"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,34 +171,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "#make 20 times 20 times 2 scenarios\n",
     "scenarios = {}\n",
+    "i=1\n",
     "for price in scenarios_price:\n",
     "    for wind in scenarios_wind:\n",
     "        for grid in grid_excess:\n",
     "            df = pd.merge(scenarios_price[price], scenarios_wind[wind], left_index=True, right_index=True)\n",
     "            #add column with grid excess\n",
     "            df['grid_excess'] = grid_excess[grid]\n",
-    "            scenarios[(price, wind, int(grid))] = df"
+    "            scenarios[i] = df\n",
+    "            i+=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle \n",
+    "# import pickle \n",
     "\n",
-    "with open('scenarios.pkl', 'wb') as f:\n",
-    "    pickle.dump(scenarios, f)\n",
+    "# with open('scenarios.pkl', 'wb') as f:\n",
+    "#     pickle.dump(scenarios, f)\n",
     "        \n",
-    "with open('scenarios.pkl', 'rb') as f:\n",
-    "    loaded_dict = pickle.load(f)"
+    "# with open('scenarios.pkl', 'rb') as f:\n",
+    "#     loaded_dict = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pick 200 random scenarios and save them in one dataframe\n",
+    "import random\n",
+    "random.seed(42)\n",
+    "random_scenarios = random.sample(range(1, 1201), 200)\n",
+    "\n",
+    "scenarios_200 = pd.DataFrame()\n",
+    "counter = 1\n",
+    "for i in random_scenarios:\n",
+    "    #add df columnwise to the dataframe without concat\n",
+    "    #scenarios[i].columns = [str(col) + '_'+str(counter) for col in scenarios[i].columns]\n",
+    "    scenarios_200 = pd.concat([scenarios_200, scenarios[i]] , axis=1)\n",
+    "    counter+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save as csv\n",
+    "scenarios_200.to_csv('scenarios_200.csv', index=False)"
    ]
   }
  ],
