--- a/Assignment2/Task1/model1.ipynb
+++ b/Assignment2/Task1/model1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,18 +109,18 @@
     "# Solve the optimization problem\n",
     "optimize!(model)\n",
     "\n",
-    "# Check the status of the solution\n",
+    "# Print the termination status\n",
     "status = termination_status(model)\n",
+    "println(\"Termination status: \", status)\n",
+    "\n",
     "if status == MOI.OPTIMAL\n",
     "    println(\"Optimal solution found\")\n",
     "    \n",
     "    # RETURN OBJECTIVE value\n",
     "    println(\"Objective value: \", objective_value(model))\n",
-    "\n",
-    "\n",
     "else\n",
     "    println(\"No optimal solution found\")\n",
-    "end\n"
+    "end"
    ]
   }
  ],
