--- a/Assignment2/Task1/model1.ipynb
+++ b/Assignment2/Task1/model1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,14 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the data\n",
     "scenarios_200 = CSV.read(\"../data/scenarios_200.csv\", DataFrame)\n",
-    "\n",
-    "println(scenarios_200)\n",
     "\n",
     "# create a dictonary with 200 dataframes for each scenario\n",
     "scenarios = Dict()\n",
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -83,24 +81,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No optimal solution found\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a new model with GLPK solver\n",
     "model = Model(GLPK.Optimizer)\n",
     "\n",
     "# Define the decision variables for hour\n",
-    "@variable(model, p_DA[1:24] >= 0)\n",
+    "@variable(model, p_DA[1:24])\n",
     "@variable(model, delta[1:200,1:24])\n",
-    "@variable(model, delta_up[1:200,1:24] >= 0)\n",
-    "@variable(model, delta_down[1:200,1:24] >= 0)\n",
+    "@variable(model, delta_up[1:200,1:24])\n",
+    "@variable(model, delta_down[1:200,1:24])\n",
     "\n",
     "# Define the objective function\n",
-    "@objective(model, Min, sum( sum( 1/200 * (scenarios[i][hour,\"price\"] * p_DA[hour] + 0.9*scenarios[i][hour,\"price\"]*delta_up[i,hour] - 1.2*scenarios[i][hour,\"price\"]*delta_down[i,hour]) for i in 1:200) for hour in 1:24))\n",
+    "@objective(model, Max, sum(sum(1/200*(scenarios[i][hour,\"price\"] * p_DA[hour] + 0.9*scenarios[i][hour,\"price\"]*delta_up[i,hour] - 1.2*scenarios[i][hour,\"price\"]*delta_down[i,hour]) for i in 1:200) for hour in 1:24))\n",
     "\n",
     "# Define the constraints\n",
     "@constraint(model, [hour in 1:24], p_DA[hour] <= 200)\n",
+    "@constraint(model, [hour in 1:24], p_DA[hour] >= 0)\n",
     "@constraint(model, [i in 1:200, hour in 1:24], delta[i,hour] == scenarios[i][hour,\"wind power\"] - p_DA[hour])\n",
     "@constraint(model, [i in 1:200, hour in 1:24], delta[i,hour] == delta_up[i,hour] - delta_down[i,hour])\n",
     "@constraint(model, [i in 1:200, hour in 1:24], delta_down[i,hour] >= 0)\n",
@@ -109,10 +116,10 @@
     "# Solve the optimization problem\n",
     "optimize!(model)\n",
     "\n",
+    "#println(model)\n",
+    "\n",
     "# Print the termination status\n",
     "status = termination_status(model)\n",
-    "println(\"Termination status: \", status)\n",
-    "\n",
     "if status == MOI.OPTIMAL\n",
     "    println(\"Optimal solution found\")\n",
     "    \n",
