--- a/Assignment2/Task1/model1_2.ipynb
+++ b/Assignment2/Task1/model1_2.ipynb
@@ -272,7 +272,7 @@
     "@variable(model, delta_down[1:W,1:hours])\n",
     "\n",
     "# Define the objective function\n",
-    "@objective(model, Max, sum(1/W*(scenarios[i][hour,\"price\"] * p_DA[hour] + delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1) - delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2)) for i in 1:W, hour in 1:hours))\n",
+    "@objective(model, Max, sum(1/W*(scenarios[i][hour,\"price\"] * p_DA[hour] + delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1) - delta_down[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2)) for i in 1:W, hour in 1:hours))\n",
     "\n",
     "# Define the constraints\n",
     "@constraint(model, [hour in 1:hours], p_DA[hour] <= 200)\n",
