--- a/Assignment2/Task1/1_3_model_one_price.ipynb
+++ b/Assignment2/Task1/1_3_model_one_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -83,15 +83,17 @@
     "end\n",
     "\n",
     "alpha = 0.99\n",
-    "betas = [0.5, 0.75, 0.9, 0.95, 0.99, 0.999, 0.9999, 0.99999]\n",
+    "#make beta a list of values\n",
+    "betas = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "objectiv_values = []\n",
     "exp_profits = []\n",
-    "CVaR_values = []"
+    "CVaR_values = []\n",
+    "p_DA_values = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -99,37 +101,25 @@
      "output_type": "stream",
      "text": [
       "Optimal solution found\n",
-      "Objective value: 154391.55537235324\n",
-      "Expected profit: 151705.65829751402\n",
-      "CVaR: 2685.897074837732\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 200.0, 200.0, 200.0, 0.0, 200.0, 0.0, 0.0, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "Objective value: 155734.50390977206\n",
-      "Expected profit: 151705.65829751402\n",
-      "CVaR: 4028.8456122565976\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -1.135916584147463e-12, 0.0, 200.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 2.0577768684639018e-13, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "Objective value: 156540.27303222337\n",
-      "Expected profit: 151705.65829751402\n",
-      "CVaR: 4834.614734707917\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -6.473456196425014e-15, 0.0, 200.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 18.7614854278853, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "Objective value: 156808.86273970714\n",
-      "Expected profit: 151705.65829751402\n",
-      "CVaR: 5103.20444219169\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -6.473456196425014e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "Objective value: 157023.7345056942\n",
-      "Expected profit: 151705.65829751402\n",
-      "CVaR: 5318.076208178709\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -6.473456196425014e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "Objective value: 157072.08065304125\n",
-      "Expected profit: 151705.65829751402\n",
-      "CVaR: 5366.422355525789\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -1.1506568389145458e-12, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430734, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "Objective value: 157076.91526777597\n",
-      "Expected profit: 151705.65829751402\n",
-      "CVaR: 5371.256970260496\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 1.6183640491062535e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430514, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "Objective value: 157077.39872924946\n",
-      "Expected profit: 151705.65829751402\n",
-      "CVaR: 5371.740431733967\n"
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 1.6183640491062535e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430514, 0.0, 200.0]\n",
+      "Optimal solution found\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 1.6183640491062535e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430514, 0.0, 200.0]\n",
+      "Optimal solution found\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 1.6183640491062535e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430514, 0.0, 200.0]\n"
      ]
     }
    ],
@@ -137,6 +127,9 @@
     "for beta in betas\n",
     "    # Create a new model with GLPK solver\n",
     "    model = Model(GLPK.Optimizer)\n",
+    "\n",
+    "    #reset the model\n",
+    "    \n",
     "\n",
     "    # Define the decision variables for hour\n",
     "    @variable(model, p_DA[1:hours])\n",
@@ -171,6 +164,8 @@
     "    status = termination_status(model)\n",
     "    if status == MOI.OPTIMAL\n",
     "        println(\"Optimal solution found\")\n",
+    "\n",
+    "        println(\"p_DA: \", value.(p_DA))\n",
     "        \n",
     "        # RETURN OBJECTIVE value\n",
     "        #println(\"Objective value: \", objective_value(model))\n",
@@ -187,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
