Frustrating one price results

--- a/Assignment2/Task1/1_3_model_one_price.ipynb
+++ b/Assignment2/Task1/1_3_model_one_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
     "\n",
     "alpha = 0.99\n",
     "#make beta a list of values\n",
-    "betas = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "betas = [0.1, 1, 100, 1000, 10000, 1000000, 10000000, 10000000000000000000000000000000000000]\n",
     "objectiv_values = []\n",
     "exp_profits = []\n",
     "CVaR_values = []\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -101,25 +101,21 @@
      "output_type": "stream",
      "text": [
       "Optimal solution found\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 200.0, 200.0, 200.0, -2.842170943040401e-14, 200.0, 0.0, 0.0, 0.0, 200.0]\n",
+      "Optimal solution found\n",
       "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 200.0, 200.0, 200.0, 0.0, 200.0, 0.0, 0.0, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -1.135916584147463e-12, 0.0, 200.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 2.0577768684639018e-13, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -1.2574688661555584e-12, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430528, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -6.473456196425014e-15, 0.0, 200.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 18.7614854278853, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.44541279843019, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -6.473456196425014e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -6.473456196425014e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430215, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -1.1506568389145458e-12, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430734, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430215, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 1.6183640491062535e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430514, 0.0, 200.0]\n",
-      "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 1.6183640491062535e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430514, 0.0, 200.0]\n",
-      "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 1.6183640491062535e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430514, 0.0, 200.0]\n",
-      "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 1.6183640491062535e-15, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430514, 0.0, 200.0]\n"
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 151.10161283870966, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430215, 0.0, 200.0]\n"
      ]
     }
    ],
@@ -182,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
