--- a/Assignment2/Task1/1_3_model_one_price.ipynb
+++ b/Assignment2/Task1/1_3_model_one_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -87,13 +87,12 @@
     "betas = [0.1, 1, 100, 1000, 10000, 1000000, 10000000, 10000000000000000000000000000000000000]\n",
     "objectiv_values = []\n",
     "exp_profits = []\n",
-    "CVaR_values = []\n",
-    "p_DA_values = []"
+    "CVaR_values = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -134,10 +133,10 @@
     "    @variable(model, eta[1:W] >= 0)\n",
     "\n",
     "    # Define the objective function\n",
-    "    @objective(model, Max, sum(1/W .*\n",
+    "    @objective(model, Max, sum(1/W *\n",
     "    (scenarios[i][hour,\"price\"] * p_DA[hour]\n",
     "    + scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours)\n",
-    "    + beta  * (zeta - (1/(1-alpha)) * sum(1/W .* eta[i] for i in 1:W)))\n",
+    "    + beta  * (zeta - (1/(1-alpha)) * sum(1/W * eta[i] for i in 1:W)))\n",
     "\n",
     "    # Define the constraints\n",
     "    @constraint(model, [hour in 1:hours], p_DA[hour] <= 200)\n",
@@ -178,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
