--- a/Assignment2/Task1/1_3_model_one_price.ipynb
+++ b/Assignment2/Task1/1_3_model_one_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -102,19 +102,19 @@
       "Optimal solution found\n",
       "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 200.0, 200.0, 200.0, -2.842170943040401e-14, 200.0, 0.0, 0.0, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 200.0, 200.0, 200.0, 0.0, 200.0, 0.0, 0.0, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 2.842170943040401e-14, 0.0, 200.0, 200.0, 200.0, 200.0, 200.0, 200.0, 0.0, 200.0, 0.0, 2.3947935693636538e-14, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, -1.2574688661555584e-12, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430528, 0.0, 200.0]\n",
-      "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.44541279843019, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
       "Optimal solution found\n",
       "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
       "Optimal solution found\n",
       "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430215, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430215, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 151.10161283870966, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430215, 0.0, 200.0]\n"
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
+      "Optimal solution found\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 151.10161283870966, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
     "for beta in betas\n",
     "    # Create a new model with GLPK solver\n",
     "    model = Model(GLPK.Optimizer)\n",
-    "\n",
+    "    unregister(model, :p_DA)\n",
     "    #reset the model\n",
     "    \n",
     "\n",
@@ -130,7 +130,7 @@
     "    @variable(model, p_DA[1:hours])\n",
     "    @variable(model, delta[1:W,1:hours])\n",
     "    @variable(model, zeta)\n",
-    "    @variable(model, eta[1:W] >= 0)\n",
+    "    @variable(model, eta[1:W])\n",
     "\n",
     "    # Define the objective function\n",
     "    @objective(model, Max, sum(1/W *\n",
@@ -142,6 +142,7 @@
     "    @constraint(model, [hour in 1:hours], p_DA[hour] <= 200)\n",
     "    @constraint(model, [hour in 1:hours], p_DA[hour] >= 0)\n",
     "    @constraint(model, [i in 1:W, hour in 1:hours], delta[i,hour] == scenarios[i][hour,\"wind power\"] - p_DA[hour])\n",
+    "    @constraint(model, [i in 1:W], eta[i] >= 0)\n",
     "    @constraint(model, [i in 1:W], -1 * sum((scenarios[i][hour,\"price\"] * p_DA[hour]\n",
     "    + scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for hour in 1:hours) + zeta - eta[i] <= 0)\n",
     "\n",
@@ -153,7 +154,7 @@
     "    (scenarios[i][hour,\"price\"] * value.(p_DA[hour])\n",
     "    + scenarios[i][hour,\"price\"] * value.(delta[i, hour])*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours)\n",
     "\n",
-    "    CVaR = beta  * (value.(zeta) - (1/(1-alpha)) * sum(1/W .* value.(eta[i]) for i in 1:W))\n",
+    "    CVaR = (value.(zeta) - (1/(1-alpha)) * sum(1/W .* value.(eta[i]) for i in 1:W))\n",
     "\n",
     "    # Print the termination status\n",
     "    status = termination_status(model)\n",
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
