--- a/Assignment2/Task1/1_3_model_one_price.ipynb
+++ b/Assignment2/Task1/1_3_model_one_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -82,9 +82,9 @@
     "    counter += 1\n",
     "end\n",
     "\n",
-    "alpha = 0.99\n",
+    "alpha = 0.9\n",
     "#make beta a list of values\n",
-    "betas = [0.1, 1, 100, 1000, 10000, 1000000, 10000000, 10000000000000000000000000000000000000]\n",
+    "betas = [0.1, 0.2, 0.5, 0.7, 0.9, 0.95, 0.99, 0.999]\n",
     "objectiv_values = []\n",
     "exp_profits = []\n",
     "CVaR_values = []"
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -100,21 +100,21 @@
      "output_type": "stream",
      "text": [
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 200.0, 200.0, 200.0, -2.842170943040401e-14, 200.0, 0.0, 0.0, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 200.0, 200.0, 200.0, -2.2737367544323206e-13, 200.0, 0.0, 0.0, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 2.842170943040401e-14, 0.0, 200.0, 200.0, 200.0, 200.0, 200.0, 200.0, 0.0, 200.0, 0.0, 2.3947935693636538e-14, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 200.0, 200.0, 200.0, -2.2737367544323206e-13, 200.0, 0.0, 0.0, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 0.0, 44.394115496773416, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 0.0, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
+      "p_DA: [200.00000000000003, 0.0, 5.684341886080802e-14, 101.36268623281507, 7.283240855038468e-13, 200.00000000000117, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, -1.1084466677857563e-12, 200.0, 200.0, 0.0, 200.0, 0.0, 200.00000000000003, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.445412798430215, 0.0, 200.0]\n",
+      "p_DA: [200.0, 0.0, 2.842170943040401e-14, 101.36268623281752, 3.0730973321624333e-12, 200.00000000000327, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 1.9895196601282805e-13, 200.0, 200.0, 0.0, 200.0, 0.0, 199.99999999999997, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
+      "p_DA: [199.9999999999999, 0.0, 2.842170943040401e-14, 101.36268623281605, -1.0092430146661957e-13, 200.000000000001, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 1.6073544066679146e-12, 200.0, 200.0, 0.0, 200.0, 0.0, 200.00000000000108, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n",
+      "p_DA: [199.99999999999997, 0.0, -2.842170943040401e-14, 101.3626862328158, 2.255698649561112e-13, 200.00000000000048, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 2.4831200664811852e-12, 200.0, 200.0, 0.0, 200.0, 0.0, 200.00000000000037, 0.0, 200.0]\n",
       "Optimal solution found\n",
-      "p_DA: [200.0, 0.0, 200.0, 200.0, 0.0, 151.10161283870966, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 0.0, 200.0, 0.0, 200.0, 200.0, 0.0, 200.0, 0.0, 28.4454127984302, 0.0, 200.0]\n"
+      "p_DA: [200.0, 0.0, 0.0, 101.36268623281569, -3.3892127199247006e-13, 200.0000000000001, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, 2.678924011113191e-12, 200.0, 200.0, 0.0, 200.0, 0.0, 200.00000000000023, 0.0, 200.0]\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
     "    @variable(model, eta[1:W])\n",
     "\n",
     "    # Define the objective function\n",
-    "    @objective(model, Max, sum(1/W *\n",
+    "    @objective(model, Max, (1-beta) * sum(1/W *\n",
     "    (scenarios[i][hour,\"price\"] * p_DA[hour]\n",
     "    + scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours)\n",
     "    + beta  * (zeta - (1/(1-alpha)) * sum(1/W * eta[i] for i in 1:W)))\n",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
