--- a/Assignment2/Task1/1_3_model_two_price.ipynb
+++ b/Assignment2/Task1/1_3_model_two_price.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "alpha = 0.9\n",
     "#make beta a list of values\n",
-    "betas = [0.1, 0.2, 0.5, 0.7, 0.9, 0.95, 0.99, 0.999]\n",
+    "betas = [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1]\n",
     "objectiv_values = []\n",
     "exp_profits = []\n",
     "CVaR_values = []"
@@ -179,15 +179,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.3",
+   "display_name": "Julia 1.10.0",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.3"
+   "version": "1.10.0"
   }
  },
  "nbformat": 4,
